<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <ImageView
        android:contentDescription="@string/football"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ball" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:background="#44000000"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:paddingTop="8dp"
                    android:text="@string/teamatitle"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_a_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-bold"
                    android:freezesText="true"
                    android:gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textColor="#fff"
                    android:textSize="56sp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="submitGoalTeamA"
                android:text="@string/goal"
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:background="#44000000"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:paddingTop="0dp"
                    android:text="@string/faults"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_a_fault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-bold"
                    android:freezesText="true"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/zero"
                    android:textColor="#fff"
                    android:textSize="26sp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="submitFaultTeamA"
                android:text="@string/fault"
                android:textColor="#fff" />


        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:background="#44000000"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:paddingTop="8dp"
                    android:text="@string/teambtitle"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_b_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-bold"
                    android:freezesText="true"
                    android:gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textColor="#fff"
                    android:textSize="56sp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="submitGoalTeamB"
                android:text="@string/goal"
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:background="#44000000"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:paddingTop="0dp"
                    android:text="@string/faults"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_b_fault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-bold"
                    android:freezesText="true"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/zero"
                    android:textColor="#fff"
                    android:textSize="26sp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="submitFaultTeamB"
                android:text="@string/fault"
                android:textColor="#fff" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="#fff" />

</RelativeLayout>
